@@ -502,7 +502,7 @@ can_edit_attr(dbref player, dbref thing, const char *attrname)
 #define set_default_flags(atr,flags) \
   do { \
     ATTR *std = atr_match(AL_NAME((atr))); \
-    if (std && !strcmp(AL_NAME(std), AL_NAME((atr)))) {	\
+    if (std && !strcmp(AL_NAME(std), AL_NAME((atr)))) { \
       AL_FLAGS(atr) = AL_FLAGS(std) | flags; \
     } else { \
         AL_FLAGS(atr) = flags; \
@@ -2028,6 +2028,7 @@ do_set_atr(dbref thing, const char *RESTRICT atr, const char *RESTRICT s,
     }
     if (GoodObject(announceloc)) {
       char *bp = tbuf1;
+      orator = thing;
       if (!s && !was_listener && !Hearer(thing)) {
         safe_format(tbuf1, &bp, T("%s loses its ears and becomes deaf."),
                     Name(thing));
